<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.networknt</groupId>
	<artifactId>undertow</artifactId>
	<version>0.1.0</version>
	<packaging>pom</packaging>
	<name>Parent POM</name>
	<description>Java Undertow Framework Components</description>

	<properties>
		<java.version>1.8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<version.jackson>2.8.2</version.jackson>
		<version.slf4j>1.7.21</version.slf4j>
		<version.jose4j>0.5.2</version.jose4j>
		<version.antlr4>4.5.3</version.antlr4>
		<version.commons-lang>2.6</version.commons-lang>
		<version.commons.io>2.5</version.commons.io>
		<version.commons.codec>1.10</version.commons.codec>
		<version.encoder>1.2</version.encoder>
		<version.metrics>3.1.2</version.metrics>
		<version.logback>1.1.7</version.logback>
		<version.junit>4.12</version.junit>
		<version.mockito>2.1.0-beta.124</version.mockito>
		<version.undertow>1.4.0.Final</version.undertow>
		<version.jsonpath>2.2.0</version.jsonpath>
		<version.httpclient>4.5.2</version.httpclient>
		<version.httpasyncclient>4.1.2</version.httpasyncclient>
		<nexus.server>http://nexus.com:8080</nexus.server>
		<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
	</properties>

	<modules>
        <module>config</module>
        <module>utility</module>
		<module>security</module>
        <module>server</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<!-- Modules in this project -->
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>config</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>utility</artifactId>
                <version>${project.version}</version>
            </dependency>
			<dependency>
				<groupId>com.networknt</groupId>
				<artifactId>security</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.networknt</groupId>
				<artifactId>server</artifactId>
				<version>${project.version}</version>
			</dependency>
			<!-- External dependencies -->

			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${version.jackson}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${version.slf4j}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-ext</artifactId>
				<version>${version.slf4j}</version>
			</dependency>
			<dependency>
				<groupId>org.bitbucket.b_c</groupId>
				<artifactId>jose4j</artifactId>
				<version>${version.jose4j}</version>
			</dependency>
			<dependency>
				<groupId>org.antlr</groupId>
				<artifactId>antlr4-runtime</artifactId>
				<version>${version.antlr4}</version>
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>${version.commons-lang}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${version.commons.io}</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>${version.commons.codec}</version>
			</dependency>
			<dependency>
				<groupId>org.owasp.encoder</groupId>
				<artifactId>encoder</artifactId>
				<version>${version.encoder}</version>
			</dependency>
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-core</artifactId>
				<version>${version.metrics}</version>
			</dependency>
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-influx</artifactId>
				<version>${version.metrics}</version>
			</dependency>
			<dependency>
				<groupId>com.jayway.jsonpath</groupId>
				<artifactId>json-path</artifactId>
				<version>${version.jsonpath}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>${version.httpclient}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpasyncclient</artifactId>
				<version>${version.httpasyncclient}</version>
			</dependency>
			<dependency>
				<groupId>io.undertow</groupId>
				<artifactId>undertow-core</artifactId>
				<version>${version.undertow}</version>
			</dependency>

			<!-- Test dependencies -->
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${version.logback}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${version.junit}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${version.mockito}</version>
				<scope>test</scope>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<distributionManagement>
		<repository>
			<id>Nexus</id>
			<name>Internal Releases</name>
			<url>${nexus.server}/nexus/content/repositories/Java-Releases/</url>
		</repository>
		<snapshotRepository>
			<id>Nexus</id>
			<name>Internal Snapshots</name>
			<url>${nexus.server}/nexus/content/repositories/Java-Snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<build>
		<sourceDirectory>${basedir}/src/main/java</sourceDirectory>
		<testSourceDirectory>${basedir}/src/test/java</testSourceDirectory>
		<resources>
			<resource>
				<filtering>false</filtering>
				<directory>${basedir}/src/main/resources</directory>
				<includes>
					<include>**/*</include>
				</includes>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<filtering>false</filtering>
				<directory>${basedir}/src/test/resources</directory>
				<includes>
					<include>**/*</include>
				</includes>
			</testResource>
		</testResources>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.14</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit47</artifactId>
						<version>2.14</version>
					</dependency>
				</dependencies>
			</plugin>


			<!-- JACOCO added for code coverage -->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.7.4.201502262128</version>
				<executions>
					<execution>
						<id>pre-unit-test</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<propertyName>surefireArgLine</propertyName>
						</configuration>
					</execution>
					<execution>
						<id>post-unit-test</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- end JACOCO -->

		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.14</version>
			</plugin>
		</plugins>
	</reporting>

</project>
